Return N/A if the roman numeral isn't present

--- a/src/app/executive/shakemap-pin/shakemap-pin.component.html
+++ b/src/app/executive/shakemap-pin/shakemap-pin.component.html
@@ -5,8 +5,7 @@
     <a [routerLink]="link">{{ title }}</a>
     <shared-mmi
         [bubble]="true"
-        [intensity]="product | sharedProductProperty:'maxmmi' |
-            sharedNumber:0:0">
+        [intensity]="product | sharedProductProperty:'maxmmi'">
     </shared-mmi>
   </div>
 
