--- a/src/app/event-page/event-page/event-page.component.html
+++ b/src/app/event-page/event-page/event-page.component.html
@@ -1,6 +1,10 @@
-<ng-container *ngIf="this?.eventService?.event$ | async;
-    else noEvent; let event">
-  <hazdev-template [COOPERATOR]="this.contributorService.contributors$ | async | cooperator:event"
+<ng-container *ngIf="this?.eventService?.event$ | async as event">
+  <hazdev-template [COOPERATOR]="
+  this.contributorService.contributors$
+  |
+  async
+  |
+  cooperator:event"
     [CONTACT]="'mailto:lisa%2Behpweb@usgs.gov'"
     [TITLE]="event | sharedEventTitle">
     <event-page-header [event]="event"></event-page-header>
@@ -31,7 +35,3 @@
     </event-page-footer>
   </hazdev-template>
 </ng-container>
-
-<ng-template #noEvent>
-  <h1>No Event</h1>
-</ng-template>
